--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@
 !var/logs/.gitkeep
 !var/sessions/.gitkeep
 
+# PHPUnit
+logs/*
+.phpunit.result.cache
+
 # Parameters
 /app/config/parameters.yml
 /app/config/parameters.ini
