--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,13 @@
     "psr-4": { "CrossKnowledge\\FeedbackDataEncrypterBundle\\": "" }
   },
   "require": {
-    "php": ">=5.5",
-    "symfony/symfony": ">=2.6 <4.0"
+    "php": ">=7.2",
+    "phpseclib/mcrypt_compat": "^1.0",
+    "ext-json": "*",
+    "symfony/symfony": "^3.0|^4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~3.7"
+    "phpunit/phpunit": "^8",
+    "symfony/phpunit-bridge": "^6"
   }
 }
